ciReplay: replay failure due to incomplete ciMethodData information

XMLWordPrintable

    • b24

      I pulled the proposed PR from:
      https://github.com/openjdk/jdk/pull/6099
      merged with master, undid the proposed fix. Then running the test reliably triggers a crash but using the replay file that's produced by the crash, I can't trigger the crash again. I tried reverting recent changes to replay compilation and that makes no difference.
      Test attached so it doesn't get lost.

            Assignee:
            Dean Long
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: