8276095: ciReplay: replay failure due to incomplete ciMethodData information

Reviewed-by: chagedorn, kvn