src/hotspot/share/ci/ciReplay.hpp
@@ -131,4 +131,10 @@ class ciReplay {
 
 };
 
+// Replay file format version history
+// 0: legacy (no version number)
+// 1: first instanceKlass sets protection domain (8275868)
+//    replace current_mileage with invocation_count (8276095)
+#define REPLAY_VERSION 1 // current version, bump up for incompatible changes
+
 #endif // SHARE_CI_CIREPLAY_HPP
